--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -98,9 +98,9 @@ $(document).ready(function(){
             <span class="indexTopbannerFold">展开<s></s></span>
         </div>-->
         <div id="top" class="indexTopbanner">
-            <a href="{{ path('jili_frontend_taobao_index') }}" class="allPointer"></a>
+            <a href="{{ path('jili_frontend_taobao_index', {'l': 1}) }}" class="allPointer"></a>
             <div class="rule">
-            <a href="{{ path('jili_frontend_taobao_index') }}" class="ruleLink"></a>
+                <a href="{{ path('jili_frontend_taobao_index',{l:2}) }}" class="ruleLink"></a>
             <div class="ruleCon">
                 <a href="{{ path('jili_frontend_taobao_index') }}" class="rulePic"></a>
                 <div class="ruleDetail">
