--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -98,13 +98,13 @@ $(document).ready(function(){
             <span class="indexTopbannerFold">展开<s></s></span>
         </div>-->
         <div id="top" class="indexTopbanner">
-            <a href="{{ path('jili_frontend_taobao_index', {'l': 1}) }}" class="allPointer"></a>
+            <a href="{{ path('jili_frontend_taobao_index', {'l':1}) }}" class="allPointer"></a>
             <div class="rule">
-                <a href="{{ path('jili_frontend_taobao_index',{l:2}) }}" class="ruleLink"></a>
+                <a href="{{ path('jili_frontend_taobao_index',{'l':2}) }}" class="ruleLink"></a>
             <div class="ruleCon">
-                <a href="{{ path('jili_frontend_taobao_index') }}" class="rulePic"></a>
+                <a href="{{ path('jili_frontend_taobao_index', {'l':3}) }}" class="rulePic"></a>
                 <div class="ruleDetail">
-                    <p>在<a href="{{ path('jili_frontend_taobao_index') }}" class="textLink">淘宝页面</a>找到宝箱，每天就有机会赢米粒</p>
+                    <p>在<a href="{{ path('jili_frontend_taobao_index',{'l':4}) }}" class="textLink">淘宝页面</a>找到宝箱，每天就有机会赢米粒</p>
                     <ul class="clearfix">
                         <li>一等奖：888米粒</li>
                         <li>四等奖：20米粒</li>
