--- a/src/Jili/BackendBundle/Resources/views/taobao/saveComponent.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/taobao/saveComponent.html.twig
@@ -70,7 +70,7 @@ $(document).ready(function(){
     <tr>
         <td>组件内容：</td>
         <td>
-            <textarea cols="60" rows="5" id="content" name="content">{{keyword}}</textarea>
+            <textarea cols="60" rows="5" id="content" name="content">{{content}}</textarea>
         </td>
     </tr>
     <tr>
