--- a/src/Jili/FrontendBundle/Resources/views/Taobao/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Taobao/index.html.twig
@@ -52,6 +52,9 @@
 			$.cookie("fistShowFlag", true,{expires:100});
 		})(jQuery);
 	</script>
+    
+    <div class="toTop" id="toTop"><img src="{{ asset('images/taobao/toTop.gif')}}" /></div>
+    
 {% include "JiliFrontendBundle::alimama.html.twig" with { pid:"mm_49376465_4372428_26502700" } %}
 
 </div>
