--- a/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
@@ -691,6 +691,7 @@
                 <TD colSpan=2></TD>
             </TR>
         </TABLE>
+        {%include "JiliBackendBundle:GameEggsBreaker:backend_menu_partial.html.twig" %}
         </TD>
     </TR>
 </TABLE>
