--- a/src/Jili/FrontendBundle/Resources/views/DecemberActivity/stat.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/DecemberActivity/stat.html.twig
@@ -1,1 +1,13 @@
-<h4>top ranking -- the stat page </h4>
+<ul>
+    <li>****淘宝购物100元，得到2个金蛋</li>
+    <li>****淘宝购物100元，得到2个金蛋</li>
+    <li>****淘宝购物100元，得到2个金蛋</li>
+    <li>****淘宝购物100元，得到2个金蛋</li>
+    <li>*sd***淘宝购物100元，得到2个金蛋</li>
+    <li>****淘宝购物100元，得到2个金蛋</li>
+    <li>****淘宝购物100元，得到2个金蛋</li>
+    <li>****淘宝购物100元，得到2个金蛋</li>
+   	<li>****淘宝购物100元，得到2个金蛋</li>
+	<li>****淘宝购物100元，得到2个金蛋</li>
+   	<li>*sd***淘宝购物100元，得到2个金蛋</li>
+</ul>
