--- a/src/Jili/FrontendBundle/Resources/views/DecemberActivity/tb_order_form.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/DecemberActivity/tb_order_form.html.twig
@@ -1,13 +1,27 @@
-<div>
-<form action="{{ path('jili_frontend_decemberactivity_addtaobaoorder')  }}" method="POST">
-{{ form_label( form.orderId) }}
+<form action="{{ path('jili_frontend_decemberactivity_addtaobaoorder') }}" method="POST">
+    <ul class="shoppingForm">
+        <li><label for="datepicker">购物时间：</label><input type="text" id="datepicker" value="" class="clearTxt"/><span class="defaultTxt">yyyy-mm-dd</span></li>
+        <li><label for="orderNum">淘宝订单号：</label><input type="text" id="orderNum" value="" class="clearTxt"/><span class="defaultTxt"></span></li>
+    </ul>
+	<div class="submitBtn"></div>
+<!--{{ form_label( form.orderId) }}
 {{ form_widget(form.orderId ) }}
 
 {{ form_label(form.orderPaid ) }}
 {{ form_widget( form.orderPaid) }}
 
 {{ form_rest(form) }}
-<input type="submit" value="submit" />
-
+<input type="submit" value="submit" />-->
 </form>
-</div>
+{% set flashbag = app.session.flashbag.all %}
+{% if flashbag is not empty %}
+    <div class="messages-container">
+        {% for type, messages in flashbag %}
+            {% for message in messages %}
+                <div class="alert alert-{{ type }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
+    </div>
+{% endif %}
