--- a/src/Jili/FrontendBundle/Resources/views/DecemberActivity/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/DecemberActivity/index.html.twig
@@ -26,7 +26,7 @@
     <div class="decMainCon">
         <div class="luckyDraw clearfix">
             <div class="luckyDrawL">
-                <p>我当前拥有金蛋的个数：<strong class="eggNum">1</strong>抢下一个金蛋所需消费淘宝金额：<strong class="eggMoney">50元</strong></p>
+                <p>我当前拥有金蛋的个数：<strong class="eggNum"></strong>抢下一个金蛋所需消费淘宝金额：<strong class="eggMoney"></strong></p>
                 <div class="noStart"><img src="{{ asset('images/december/noStart.png')}}" width="424" height="171" alt="您还没有金蛋哦"></div>
                 <div class="mask">
                     <ul class="goldenEggs clearfix">
