--- a/src/Jili/FrontendBundle/Resources/views/DecemberActivity/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/DecemberActivity/index.html.twig
@@ -210,7 +210,7 @@
             <p>第<span>1</span>步，当前<a href="javascript: void(0)" target="_blank">活动页面</a>购物或者到<a href="{{ path('jili_frontend_taobao_index') }}">淘宝专页</a>购物满<strong>10</strong>元</p>
             <p>
             	第<span>2</span>步，填写如下表单
-                <div>{% render(controller("JiliFrontendBundle:DecemberActivity:addTaobaoOrder") ) %}</div>
+                <div class="formWrapper">{% render(controller("JiliFrontendBundle:DecemberActivity:addTaobaoOrder") ) %}</div>
             </p>
         </div>
     </div>
