--- a/web/css/jl.ui.Dec.css
+++ b/web/css/jl.ui.Dec.css
@@ -1,3 +1,4 @@
+html { overflow-x: visible;}
 body{ color: #fff; font-family: "微软雅黑"; background-color: #f5ce42; overflow-x: hidden;}
 a{ color: #fff;}
 .clearfix:after{clear:both;	visibility:hidden;display:block;font-size:0;content:'.';height:0;}
@@ -43,7 +44,7 @@ a{ color: #fff;}
 .luckyDrawL, .luckyDrawR{ float: left;}
 .luckyDrawL{ position: relative; z-index: 1; width: 583px; margin-right: 35px;}
 .luckyDrawL .noStart{ text-align: center; display: none; cursor: pointer;}
-.luckyDrawL .mask{ margin-top: 15px; width: 570px; height: 186px; overflow-x: hidden; padding-left: 10px;}
+.luckyDrawL .mask{ margin-top: 15px; width: 570px; height: 186px; overflow-x: hidden; overflow-y: auto; padding-left: 10px;}
 .luckyDrawL li{ float: left; cursor: pointer; margin-right: 28px; text-align: center;}
 .luckyDrawL li span{ margin: 10px auto; width: 100px; height: 28px; line-height: 28px; background-color: #8f8f8f; border-radius: 5px; box-shadow: 0 3px 0 rgba(0, 0, 0, .7); display: inline-block; *display: inline; *zoom: 1; vertical-align: top;}
 .luckyDrawL p{ height: 40px; line-height: 40px; padding-left: 25px; background-color: #5c3210;}
@@ -76,13 +77,11 @@ a{ color: #fff;}
 .decListMain li .proDetail b, .decListMain li .proDetail strong{ color: #cc122a; font-size: 12px;} 
 .decListMain li .proDetail b{ padding-left:5px; padding-right: 3px;}
 .decListMain li .proDetail strong{ font-family: "微软雅黑"; font-size: 18px; font-weight: bold; margin-right: 10px;}
-.decListMain li .bugBtn{ width: 32px; height: 36px; padding: 7px 10px 7px 8px; line-height: 18px; font-size: 13px; font-weight: bold; background: #cc122a url(../images/december/arrow.png) no-repeat 38px 30px;}
+.decListMain li .bugBtn{ width: 32px; height: 36px; padding: 7px 10px 7px 8px; line-height: 18px; font-size: 13px; font-weight: bold; background: #cc122a url(../images/december/arrow.png) no-repeat 38px 30px; cursor: pointer;}
 .decListMain li .proDetail a{ color: #828282;}
 .decListMain li .proDetail a:hover{ text-decoration: underline;}
 .decListMain li .proDetail span{text-decoration:line-through;}
 .fixMask{ position: fixed; z-index: 9998; left: 0; top: 0; width: 100%; height: 100%; opacity: .6; filter: alpha(opacity=60); background-color: #000;}
 .popupCon{ position: fixed; z-index: 9999; width: 990px; left: 50%; margin-left: -495px; top: 0;}
-.eggTips, .submitTips{ position: absolute; z-index: 3000; top: 100px; left: 50%; margin-left: -80px; width: 160px; height: 35px; text-align: center; line-height: 35px; background-color: #fff; color: #333; font-size: 12px;}
-.formWrapper{ position: relative; z-index: 1;}
-.submitTips{ top: 120px; left: 130px; margin-left: 0;}
+.eggTips{ position: absolute; z-index: 3000; top: 100px; left: 50%; margin-left: -80px; width: 160px; height: 35px; text-align: center; line-height: 35px; background-color: #fff; color: #333; font-size: 12px;}
 .shoppingForm li.errorMsg{ font-size: 12px; color: #cc122a; margin-top: 10px;}
