--- a/src/Jili/FrontendBundle/Resources/views/DecemberActivity/tb_order_form.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/DecemberActivity/tb_order_form.html.twig
@@ -24,5 +24,5 @@
         {% endif %}
     </ul>
      {{ form_rest(form) }}
-    <button type="submit" value="submit"  class="submitBtn"  style="border:0;"></button>
+    <input type="submit" value="submit"  class="submitBtn"  style="border:0;" />
 </form>
