--- a/src/Jili/FrontendBundle/Resources/views/DecemberActivity/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/DecemberActivity/index.html.twig
@@ -44,7 +44,7 @@
                 <div class="winnerList">
                     <h2>抢金蛋名单</h2>
                     <div class="mask">
-						{% render(controller("JiliFrontendBundle:DecemberActivity:stat") ) %}
+						{% render(controller("JiliFrontendBundle:DecemberActivity:eggsSentStat") ) %}
                     </div>
                 </div>
             </div>
