--- a/src/Jili/BackendBundle/Resources/views/GameEggsBreaker/TaobaoOrder/list.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/GameEggsBreaker/TaobaoOrder/list.html.twig
@@ -13,6 +13,20 @@ Taobao订单列表-12月活动-{{ parent() }}
 {% block body %}
 
 <h4>Taobao订单</h4>
+
+{% set flashbag = app.session.flashbag.all %}
+{% if flashbag is not empty %}
+    <div class="messages-container">
+    {% for type, messages in flashbag %}
+        {% for message in messages %}
+             <div class="alert alert-{{ type }}">
+                 {{ message }}
+             </div>
+        {% endfor %}
+    {% endfor %}
+    </div>
+{% endif %}
+
 <table align="center" width="300">
 <tr>
 <th>订单号</th>
