--- a/src/Jili/FrontendBundle/Resources/views/DecemberActivity/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/DecemberActivity/index.html.twig
@@ -9,6 +9,8 @@
     <link type="text/css" rel="stylesheet" href="{{ asset('css1408/jquery.datetimepicker.css')}}"/>
     <link type="text/css" rel="stylesheet" href="{{ asset('css/jl.ui.Dec.css')}}"/>
     <script src="{{ asset('js/jquery-1.10.2.js')}}" type="text/javascript"></script>
+<script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+<script src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}"></script>
     <script src="{{ asset('js1408/jquery.datetimepicker.js')}}" type="text/javascript"></script>
     <script src="{{ asset('js1408/jl.ui.dec.js')}}" type="text/javascript"></script>
 </head>
