--- a/web/css1408/jl.ui.home.css
+++ b/web/css1408/jl.ui.home.css
@@ -564,19 +564,18 @@ div.notice{
 	color: #fff;
     background: url(../images1408/rankBg.png) no-repeat;
 }
-/*2014-11-21, by wlt*/
+/*2014-12-11, by wlt*/
 .adMask{ position: fixed; z-index: 1000; top: 0; left: 0; width: 100%; height: 100%; background-color: #000; opacity: .7; filter: alpha(opacity = 70);}
-.bxAdWrapper{ position: absolute; z-index: 1999;  left: 50%; top: 139px; width: 1000px; margin-left: -500px;}
-.bxAd{ position: relative; z-index: 2000; left: 0px; top: 0; width: 1000px; height: 510px; overflow: hidden; display: none;}
-.bxAd .bxAdBg{ position: absolute; z-index: 2999; width: 1000px; height: 510px; top: 0; left: 0; background: url(../images/taobao/bg_sy.png) no-repeat 212px 80px;}
-.bxAd .sunRun, .bxAd .sample, .bxAd .close, .bxAd .goBtn, .bxAd .rewardRules{ position: absolute; z-index: 3000;}
-.bxAd .sunRun{ width: 178px; height: 104px; left: 803px; top: 121px; background: url(../images/taobao/sunRun.gif) no-repeat;}
-.bxAd .sample{ width: 121px; height: 44px; left: 766px; top: 10px; background: url(../images/taobao/sample.jpg) no-repeat;}
-.bxAd .close{ width: 27px; height: 27px; left: 940px; top: 20px; cursor: pointer; background: url(../images/taobao/close.png) no-repeat;}
-.bxAd .goBtn{ width: 167px; height: 65px; left: 651px; top: 410px; background: url(../images/taobao/goBtn.gif) no-repeat; }
-.bxAd .rewardRules{ color: #474747; font-size: 16px; font-family: "microsoft yahei"; line-height: 25px; width: 350px; top: 270px; left: 512px; background: transparent; text-align: left; }
-.rewardRules p{ line-height: 28px;}
-.rewardRules li{ float: left; width: 175px; text-align: left;}
+.activityAdWrapper{ position: absolute; z-index: 1999;  left: 50%; top: 139px; width: 1000px; margin-left: -500px;}
+.activityAd{ position: relative; z-index: 2000; left: 0px; top: 0; width: 1000px; height: 530px; overflow: hidden; display: none;}
+.activityAd .activityAdBg{ position: absolute; z-index: 2999; width: 1000px; height: 510px; top: 0; left: 0; background: url(../images/december/decActivityBg.png) no-repeat 212px -30px;}
+.activityAd .close, .activityAd .btns{ position: absolute; z-index: 3000;}
+.activityAd .close{ width: 27px; height: 27px; left: 940px; top: 20px; cursor: pointer; background: url(../images/taobao/close.png) no-repeat;}
+.activityAd .btns{ left: 378px; top: 455px;}
+.activityAd .btns .closeBtn, .activityAd .btns .goBtn, .decActivityGif{ display: inline-block;*display: inline;*zoom: 1;cursor: pointer;}
+.activityAd .btns .closeBtn{ width: 114px; height: 64px; background: url(../images/december/decActivityClose.png) no-repeat; margin-left: 20px;}
+.activityAd .btns .goBtn{ width: 149px; height: 64px; background: url(../images/december/decActivityBtn.png) no-repeat;}
+.decActivityGif{ position: absolute; z-index: 1000; right: 0; bottom: 5px; width: 99px; height: 41px; background: url(../images/december/floating.gif) no-repeat;}
 
 
 
