--- a/src/Jili/FrontendBundle/Resources/views/DecemberActivity/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/DecemberActivity/index.html.twig
@@ -9,8 +9,8 @@
     <link type="text/css" rel="stylesheet" href="{{ asset('css1408/jquery.datetimepicker.css')}}"/>
     <link type="text/css" rel="stylesheet" href="{{ asset('css/jl.ui.Dec.css')}}"/>
     <script src="{{ asset('js/jquery-1.10.2.js')}}" type="text/javascript"></script>
-<script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
-<script src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}"></script>
+	<script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+    <script src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}"></script>
     <script src="{{ asset('js1408/jquery.datetimepicker.js')}}" type="text/javascript"></script>
     <script src="{{ asset('js1408/jl.ui.dec.js')}}" type="text/javascript"></script>
 </head>
@@ -32,22 +32,18 @@
     <div class="decMainCon">
         <div class="luckyDraw clearfix">
             {% if app.session.has('uid') %}
-                <div class="luckyDrawL">
+            <div class="luckyDrawL">
                 <p>我当前拥有金蛋的个数：<strong class="eggNum"></strong>抢下一个金蛋所需消费淘宝金额：<strong class="eggMoney"></strong></p>
                 <div class="noStart"><img src="{{ asset('images/december/noegg.gif')}}" width="400" height="200" alt="您还没有金蛋哦"></div>
                 <div class="mask">
                     <ul class="goldenEggs clearfix">
                     </ul>
                 </div>
-            </div>
+            </div> 
             {% else %}
-                <div class="luckyDrawL">
+            <div class="luckyDrawL">
                 <p>我当前拥有金蛋的个数：<strong class="eggNum">0</strong>抢下一个金蛋所需消费淘宝金额：<strong class="eggMoney">10元</strong></p>
-                <div class="noStart"><img src="{{ asset('images/december/noegg.gif')}}" width="400" height="200" alt="您还没有金蛋哦"></div>
-                <div class="mask">
-                    <ul class="goldenEggs clearfix">
-                    </ul>
-                </div>
+                <div class="noLogin"><img src="{{ asset('images/december/noegg.gif')}}" width="400" height="200" alt="您还没有金蛋哦"></div>
             </div>
             {% endif %}
             <div class="luckyDrawR">
@@ -259,7 +255,7 @@
             <p>砸金蛋时间：2015.1.20-2015.1.26</p>
         </div>
         <ul>
-        	<li>>> 购物活动期间，通过淘宝购物累计满10元就获得一次抽奖机会</li>
+        	<li>>> 购物活动期间，通过积粒网去淘宝购物累计满10元就获得一次抽奖机会</li>
             <li>>> 用户完成购物后，需通过以上表单提交该次交易的淘宝订单号及相关购物信息方便客服确认交易的有效性</li>
             <li>>> 不提交订单号的场合将视为用户自动放弃该笔交易</li>
             <li>>> 购物活动结束7天后进行抽奖活动</li>
