--- a/web/css/jl.ui.Dec.css
+++ b/web/css/jl.ui.Dec.css
@@ -22,7 +22,7 @@ a{ color: #fff;}
 .shoppingForm label{ width: 110px; height: 34px; line-height: 34px;}
 .shoppingForm input{ width: 165px; height: 30px; padding: 2px 3px;}
 .shoppingForm span{ position: absolute; z-index: 1000; padding: 3px; left: 120px; color: #b5b5b5;}
-.decRuleCon .submitBtn{ margin-top: 20px; width: 169px; height: 67px; cursor: pointer; background: url(../images/december/goBtn.png) no-repeat; outline:none;}
+.decRuleCon .submitBtn{ margin-top: 20px; width: 169px; height: 67px; cursor: pointer; background: url(../images/december/goBtn.png) no-repeat; outline:none; font-size: 0;}
 .decRuleMain{ margin-top: 30px;}
 .decRuleMain .decTime{ font-size: 18px; color: #e89d07; margin-top: 20px;}
 .decRuleMain li{ margin-top: 15px;}
