--- a/src/Jili/FrontendBundle/Resources/views/DecemberActivity/eggs_sent_stat.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/DecemberActivity/eggs_sent_stat.html.twig
@@ -1,6 +1,6 @@
 <ul>
 <!--  {{ ts|date("Y-m-d H:i:s")  }}-->
 {% for eggInfo  in eggsInfo %}
-    <li>{{ eggInfo.nick[:3] }}**淘宝购物{{ eggInfo.paid }}元，得到{{  eggInfo.countOfEggs }}个金蛋</li>
+    <li>恭喜{{ eggInfo.nick[:3] }}**淘宝购物，得到{{  eggInfo.countOfEggs }}个金蛋</li>
 {% endfor %}
 </ul>
