--- a/src/Jili/FrontendBundle/Resources/views/DecemberActivity/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/DecemberActivity/index.html.twig
@@ -24,7 +24,7 @@
         {% else %}
             <div class="login">您好，请<a href="{{ path('_user_login')}}">登录</a></div>
         {% endif %}
-        <span class="timestamp"><img src="{{ asset('images/december/foldTxt.png')}}" width="409" height="85"/></span>
+        <span class="timestamp"><img src="{{ asset('images/december/foldTxt.png')}}" width="430" height="118"/></span>
         <span class="goBtn"><img src="{{ asset('images/december/goBtn.png')}}" width="169" height="67" alt="抢金蛋"/></span>
     </div>
 </div>
@@ -127,7 +127,7 @@
                     <li><a href="http://s.click.taobao.com/t?e=m%3D2%26s%3D0Jg18jVbGggcQipKwQzePOeEDrYVVa64Qih%2F7PxfOKS5VBFTL4hn2VDMXn%2Bp6RU7tTN3K9waqqjE%2Ff4qt46kcundZYnGkACiyiq2TwADYwbPziep2VA3gZHxiph3oZfKcKC0ELXKt5LTTvQumE2RwSGFCzYOOqAQ" target="_blank"><img src="{{ asset('images/december/product/pro05_02.jpg')}}" width="230" height="182" alt="产品图片"/></a><div class="proIntro"><span class="proDetail"><p><a href="http://s.click.taobao.com/t?e=m%3D2%26s%3D0Jg18jVbGggcQipKwQzePOeEDrYVVa64Qih%2F7PxfOKS5VBFTL4hn2VDMXn%2Bp6RU7tTN3K9waqqjE%2Ff4qt46kcundZYnGkACiyiq2TwADYwbPziep2VA3gZHxiph3oZfKcKC0ELXKt5LTTvQumE2RwSGFCzYOOqAQ" target="_blank" class="txtLink">【淘宝网】磨砂皮圆头过膝靴</a></p><b>￥</b><strong>248.00</strong><span>原价：￥248</span></span><a href="http://s.click.taobao.com/t?e=m%3D2%26s%3D0Jg18jVbGggcQipKwQzePOeEDrYVVa64Qih%2F7PxfOKS5VBFTL4hn2VDMXn%2Bp6RU7tTN3K9waqqjE%2Ff4qt46kcundZYnGkACiyiq2TwADYwbPziep2VA3gZHxiph3oZfKcKC0ELXKt5LTTvQumE2RwSGFCzYOOqAQ" target="_blank"><span class="bugBtn">点击购买</span></a></div></li>
                     <li><a href="http://s.click.taobao.com/t?e=m%3D2%26s%3DpkXHxM7aNPIcQipKwQzePOeEDrYVVa64pRe%2F8jaAHci5VBFTL4hn2VDMXn%2Bp6RU7bJxUEh8sgi%2FE%2Ff4qt46kcundZYnGkACiyiq2TwADYwYOSO0S4jBF1snig%2By9PjjsBA43Ow%2F%2B77Qiv6ZCRBhaEyGFCzYOOqAQ" target="_blank"><img src="{{ asset('images/december/product/pro05_03.jpg')}}" width="230" height="182" alt="产品图片"/></a><div class="proIntro"><span class="proDetail"><p><a href="http://s.click.taobao.com/t?e=m%3D2%26s%3DpkXHxM7aNPIcQipKwQzePOeEDrYVVa64pRe%2F8jaAHci5VBFTL4hn2VDMXn%2Bp6RU7bJxUEh8sgi%2FE%2Ff4qt46kcundZYnGkACiyiq2TwADYwYOSO0S4jBF1snig%2By9PjjsBA43Ow%2F%2B77Qiv6ZCRBhaEyGFCzYOOqAQ" target="_blank" class="txtLink">【天猫】男士加绒豆豆鞋</a></p><b>￥</b><strong>59.00</strong><span>原价：￥199.00</span></span><a href="http://s.click.taobao.com/t?e=m%3D2%26s%3DpkXHxM7aNPIcQipKwQzePOeEDrYVVa64pRe%2F8jaAHci5VBFTL4hn2VDMXn%2Bp6RU7bJxUEh8sgi%2FE%2Ff4qt46kcundZYnGkACiyiq2TwADYwYOSO0S4jBF1snig%2By9PjjsBA43Ow%2F%2B77Qiv6ZCRBhaEyGFCzYOOqAQ" target="_blank"><span class="bugBtn">点击购买</span></a></div></li>
                     <li><a href="http://s.click.taobao.com/t?e=m%3D2%26s%3Dw5AHi%2FkWrp0cQipKwQzePOeEDrYVVa64Qih%2F7PxfOKS5VBFTL4hn2VDMXn%2Bp6RU7Nq%2BDna%2F8eQfE%2Ff4qt46kcundZYnGkACiyiq2TwADYwZip%2BcKhdgarHp53KVmztfl0M1ddwHng%2BFYElS8VGaG%2BCGFCzYOOqAQ" target="_blank"><img src="{{ asset('images/december/product/pro05_04.jpg')}}" width="230" height="182" alt="产品图片"/></a><div class="proIntro"><span class="proDetail"><p><a href="http://s.click.taobao.com/t?e=m%3D2%26s%3Dw5AHi%2FkWrp0cQipKwQzePOeEDrYVVa64Qih%2F7PxfOKS5VBFTL4hn2VDMXn%2Bp6RU7Nq%2BDna%2F8eQfE%2Ff4qt46kcundZYnGkACiyiq2TwADYwZip%2BcKhdgarHp53KVmztfl0M1ddwHng%2BFYElS8VGaG%2BCGFCzYOOqAQ" target="_blank" class="txtLink">【淘宝网】秋冬季板鞋</a></p><b>￥</b><strong>45.00</strong><span>原价：￥92.00</span></span><a href="http://s.click.taobao.com/t?e=m%3D2%26s%3Dw5AHi%2FkWrp0cQipKwQzePOeEDrYVVa64Qih%2F7PxfOKS5VBFTL4hn2VDMXn%2Bp6RU7Nq%2BDna%2F8eQfE%2Ff4qt46kcundZYnGkACiyiq2TwADYwZip%2BcKhdgarHp53KVmztfl0M1ddwHng%2BFYElS8VGaG%2BCGFCzYOOqAQ" target="_blank"><span class="bugBtn">点击购买</span></a></div></li>
-                    <li><a href="http://s.click.taobao.com/t?e=m%3D2%26s%3DX%2FpIliD7fp0cQipKwQzePOeEDrYVVa64Qih%2F7PxfOKS5VBFTL4hn2TYb8PU%2BSainDOz%2BQ0BmwbzE%2Ff4qt46kcundZYnGkACiyiq2TwADYwbPziep2VA3gSn5gn3b3IdHFvBkRPSN4SL04RPzglEkCyGFCzYOOqAQ" target="_blank"><img src="{{ asset('images/december/product/pro05_05.jpg')}}" width="230" height="182" alt="产品图片"/></a><div class="proIntro"><span class="proDetail"><p><a href="http://s.click.taobao.com/t?e=m%3D2%26s%3DX%2FpIliD7fp0cQipKwQzePOeEDrYVVa64Qih%2F7PxfOKS5VBFTL4hn2TYb8PU%2BSainDOz%2BQ0BmwbzE%2Ff4qt46kcundZYnGkACiyiq2TwADYwbPziep2VA3gSn5gn3b3IdHFvBkRPSN4SL04RPzglEkCyGFCzYOOqAQ" target="_blank" class="txtLink">【淘宝网】厚底马丁靴</a></p><b>￥</b><strong>168</strong><span>原价：￥899.00</span></span><a href="http://s.click.taobao.com/t?e=m%3D2%26s%3DX%2FpIliD7fp0cQipKwQzePOeEDrYVVa64Qih%2F7PxfOKS5VBFTL4hn2TYb8PU%2BSainDOz%2BQ0BmwbzE%2Ff4qt46kcundZYnGkACiyiq2TwADYwbPziep2VA3gSn5gn3b3IdHFvBkRPSN4SL04RPzglEkCyGFCzYOOqAQ" target="_blank"><span class="bugBtn">点击购买</span></a></div></li>
+                    <li><a href="http://s.click.taobao.com/t?e=m%3D2%26s%3DX%2FpIliD7fp0cQipKwQzePOeEDrYVVa64Qih%2F7PxfOKS5VBFTL4hn2TYb8PU%2BSainDOz%2BQ0BmwbzE%2Ff4qt46kcundZYnGkACiyiq2TwADYwbPziep2VA3gSn5gn3b3IdHFvBkRPSN4SL04RPzglEkCyGFCzYOOqAQ" target="_blank"><img src="{{ asset('images/december/product/pro05_05.jpg')}}" width="230" height="182" alt="产品图片"/></a><div class="proIntro"><span class="proDetail"><p><a href="http://s.click.taobao.com/t?e=m%3D2%26s%3DX%2FpIliD7fp0cQipKwQzePOeEDrYVVa64Qih%2F7PxfOKS5VBFTL4hn2TYb8PU%2BSainDOz%2BQ0BmwbzE%2Ff4qt46kcundZYnGkACiyiq2TwADYwbPziep2VA3gSn5gn3b3IdHFvBkRPSN4SL04RPzglEkCyGFCzYOOqAQ" target="_blank" class="txtLink">【淘宝网】厚底马丁靴</a></p><b>￥</b><strong>118</strong><span>原价：￥899.00</span></span><a href="http://s.click.taobao.com/t?e=m%3D2%26s%3DX%2FpIliD7fp0cQipKwQzePOeEDrYVVa64Qih%2F7PxfOKS5VBFTL4hn2TYb8PU%2BSainDOz%2BQ0BmwbzE%2Ff4qt46kcundZYnGkACiyiq2TwADYwbPziep2VA3gSn5gn3b3IdHFvBkRPSN4SL04RPzglEkCyGFCzYOOqAQ" target="_blank"><span class="bugBtn">点击购买</span></a></div></li>
                     <li><a href="http://s.click.taobao.com/t?e=m%3D2%26s%3DX0nj6ZheEiIcQipKwQzePOeEDrYVVa64Qih%2F7PxfOKS5VBFTL4hn2TYb8PU%2BSainwSB8%2FImevIDE%2Ff4qt46kcundZYnGkACiyiq2TwADYwYKFBqG%2Fy9Wq60WMQmUzdC%2FO%2BJ2MQee9fqkpJDe3So0esYOae24fhW0" target="_blank"><img src="{{ asset('images/december/product/pro05_06.jpg')}}" width="230" height="182" alt="产品图片"/></a><div class="proIntro"><span class="proDetail"><p><a href="http://s.click.taobao.com/t?e=m%3D2%26s%3DX0nj6ZheEiIcQipKwQzePOeEDrYVVa64Qih%2F7PxfOKS5VBFTL4hn2TYb8PU%2BSainwSB8%2FImevIDE%2Ff4qt46kcundZYnGkACiyiq2TwADYwYKFBqG%2Fy9Wq60WMQmUzdC%2FO%2BJ2MQee9fqkpJDe3So0esYOae24fhW0" target="_blank" class="txtLink">【淘宝网】明星款英伦风板鞋</a></p><b>￥</b><strong>58.00</strong><span>原价：￥75.00</span></span><a href="http://s.click.taobao.com/t?e=m%3D2%26s%3DX0nj6ZheEiIcQipKwQzePOeEDrYVVa64Qih%2F7PxfOKS5VBFTL4hn2TYb8PU%2BSainwSB8%2FImevIDE%2Ff4qt46kcundZYnGkACiyiq2TwADYwYKFBqG%2Fy9Wq60WMQmUzdC%2FO%2BJ2MQee9fqkpJDe3So0esYOae24fhW0" target="_blank"><span class="bugBtn">点击购买</span></a></div></li>
                     <li><a href="http://s.click.taobao.com/t?e=m%3D2%26s%3Dzd9KeBYH1dscQipKwQzePOeEDrYVVa64pRe%2F8jaAHci5VBFTL4hn2TYb8PU%2BSainWI6w0dMGH8jE%2Ff4qt46kcundZYnGkACiyiq2TwADYwbIN9dz8vPpbVt2PM24PLnMI1fRAWnoEFuVJ3j0WIORvyGFCzYOOqAQ" target="_blank"><img src="{{ asset('images/december/product/pro05_07.jpg')}}" width="230" height="182" alt="产品图片"/></a><div class="proIntro"><span class="proDetail"><p><a href="http://s.click.taobao.com/t?e=m%3D2%26s%3Dzd9KeBYH1dscQipKwQzePOeEDrYVVa64pRe%2F8jaAHci5VBFTL4hn2TYb8PU%2BSainWI6w0dMGH8jE%2Ff4qt46kcundZYnGkACiyiq2TwADYwbIN9dz8vPpbVt2PM24PLnMI1fRAWnoEFuVJ3j0WIORvyGFCzYOOqAQ" target="_blank" class="txtLink">【天猫】情侣款炮弹鞋</a></p><b>￥</b><strong>69.00</strong><span>原价：￥248.00</span></span><a href="http://s.click.taobao.com/t?e=m%3D2%26s%3Dzd9KeBYH1dscQipKwQzePOeEDrYVVa64pRe%2F8jaAHci5VBFTL4hn2TYb8PU%2BSainWI6w0dMGH8jE%2Ff4qt46kcundZYnGkACiyiq2TwADYwbIN9dz8vPpbVt2PM24PLnMI1fRAWnoEFuVJ3j0WIORvyGFCzYOOqAQ" target="_blank"><span class="bugBtn">点击购买</span></a></div></li>
                     <li><a href="http://s.click.taobao.com/t?e=m%3D2%26s%3DAOvFgCdQ6cscQipKwQzePOeEDrYVVa64Qih%2F7PxfOKS5VBFTL4hn2balezJOXfstMlIj6E1wLr7E%2Ff4qt46kcundZYnGkACiyiq2TwADYwYej6V4I6nUdtol02ykA05bd6xTgQymuDrEL%2F%2FjF8ONaMYOae24fhW0" target="_blank"><img src="{{ asset('images/december/product/pro05_08.jpg')}}" width="230" height="182" alt="产品图片"/></a><div class="proIntro"><span class="proDetail"><p><a href="http://s.click.taobao.com/t?e=m%3D2%26s%3DAOvFgCdQ6cscQipKwQzePOeEDrYVVa64Qih%2F7PxfOKS5VBFTL4hn2balezJOXfstMlIj6E1wLr7E%2Ff4qt46kcundZYnGkACiyiq2TwADYwYej6V4I6nUdtol02ykA05bd6xTgQymuDrEL%2F%2FjF8ONaMYOae24fhW0" target="_blank" class="txtLink">【淘宝网】学院风雪地靴</a></p><b>￥</b><strong>69.00</strong><span>原价：￥158.00</span></span><a href="http://s.click.taobao.com/t?e=m%3D2%26s%3DAOvFgCdQ6cscQipKwQzePOeEDrYVVa64Qih%2F7PxfOKS5VBFTL4hn2balezJOXfstMlIj6E1wLr7E%2Ff4qt46kcundZYnGkACiyiq2TwADYwYej6V4I6nUdtol02ykA05bd6xTgQymuDrEL%2F%2FjF8ONaMYOae24fhW0" target="_blank"><span class="bugBtn">点击购买</span></a></div></li>
@@ -256,7 +256,7 @@
 </div>
 <div class="decRule">
 	<div class="decRuleBtn">如何抢到金蛋<br/>>></div>
-	<div class="decRuleFlow">
+	<div class="decRuleFlow boderBot">
         <h2><em>●</em>抢金蛋流程</h2>
         <div class="decRuleCon">
             <p>第<span>1</span>步，当前<a href="javascript: void(0)" target="_blank">活动页面</a>购物或者到<a href="{{ path('jili_frontend_taobao_index') }}">淘宝专页</a>购物满<strong>10</strong>元</p>
@@ -266,19 +266,29 @@
             </p>
         </div>
     </div>
-    <div class="decRuleMain">
-        <h2><em>●</em>活动规则</h2>
-        <div class="decTime">
-            <p>抢金蛋时间：2014.12.12-2015.1.12</p>
-            <p>砸金蛋时间：2015.1.20-2015.1.26</p>
-        </div>
+    <div class="decRuleMain boderBot">
+        <h2><em>●</em>抢金蛋<em class="decTime">2014.12.12-2015.1.12</em></h2>
         <ul>
-        	<li>>> 购物活动期间，通过积粒网去淘宝购物累计满10元就获得一次抽奖机会</li>
-            <li>>> 用户完成购物后，需通过以上表单提交该次交易的淘宝订单号及相关购物信息方便客服确认交易的有效性</li>
-            <li>>> 不提交订单号的场合将视为用户自动放弃该笔交易</li>
-            <li>>> 购物活动结束7天后进行抽奖活动</li>
+        	<li>> 购物活动期间，通过积粒网去淘宝购物累计满10元能获得1次抽奖机会，满50元能获得3次抽奖机会，满150元能获得5次抽奖机会。之后每增加50元就有机会多获得1次抽奖机会。</li>
+            <li>> 用户完成购物后，需通过以上表单提交该次交易的淘宝订单号及相关信息方便客服确认交易的有效性（注：因淘宝订单确认时间较长，<em class="corRed">客服审核周期为10天左右</em>，请耐心等待）</li>
+            <li>> 不提交订单号的场合将视为用户自动放弃该笔交易</li>
         </ul>
     </div>
+    <div class="decAwardMain">
+        <h2><em>●</em>砸金蛋<em class="decTime">2015.1.20-2015.1.26</em></h2>
+        	<table class="awardDetail" width="350" cellpadding="0" cellspacing="0">
+            	<tbody>
+                	<tr><td class="dist">级别</td><td class="dist">金蛋个数</td><td class="dist">奖金数（米粒）</td></tr>
+                    <tr><td>一等奖</td><td>1</td><td>8888</td></tr>
+                    <tr><td class="dist">二等奖</td><td class="dist">2</td><td class="dist">888</td></tr>
+                    <tr><td>三等奖</td><td>10</td><td>88</td></tr>
+                    <tr><td class="dist">四等奖</td><td class="dist">100 </td><td class="dist">8</td></tr>
+                    <tr><td>安慰奖</td><td>1000</td><td>1</td></tr>
+                </tbody>
+            </table>
+    </div>
+
+    
 </div>
 </body>
 </html>
