--- a/src/Jili/FrontendBundle/Resources/views/DecemberActivity/tb_order_form.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/DecemberActivity/tb_order_form.html.twig
@@ -1,4 +1,4 @@
-<form action="{{ path('jili_frontend_decemberactivity_addtaobaoorder') }}" method="POST">
+<form action="{{ path('jili_frontend_decemberactivity_addtaobaoorder') }}" method="POST" onsubmit="return formCheck();">
     <ul class="shoppingForm">
         <li>
         {{ form_label(form.orderAt,'购物时间：', {'id': 'datepicker'} ) }}
@@ -10,9 +10,10 @@
         {{ form_widget(form.orderId , {'id':'orderNum','attr': {'value':'','class':'clearTxt'  }}) }}
         <span class="defaultTxt"></span>
         </li>
+        <li class="errorMsg">
         {% set flashbag = app.session.flashbag.all %}
         {% if flashbag is not empty %}
-            <li class="errorMsg">
+            <div class="tipsMsg">
                 {% for type, messages in flashbag %}
                     {% for message in messages %}
                         <div class="alert alert-{{ type }}">
@@ -20,8 +21,9 @@
                         </div>
                     {% endfor %}
                 {% endfor %}
-            </li>
+            </div>
         {% endif %}
+        </li>
     </ul>
      {{ form_rest(form) }}
     <input type="submit" value="submit"  class="submitBtn"  style="border:0;" />
