#537 砸金蛋奖励规则修改

--- a/src/Jili/FrontendBundle/Resources/views/DecemberActivity/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/DecemberActivity/index.html.twig
@@ -278,17 +278,16 @@
         <h2><em>●</em>砸金蛋<em class="decTime">2015.1.20-2015.1.26</em></h2>
         	<table class="awardDetail" width="350" cellpadding="0" cellspacing="0">
             	<tbody>
-                	<tr><td class="dist">级别</td><td class="dist">金蛋个数</td><td class="dist">奖金数（米粒）</td></tr>
-                    <tr><td>一等奖</td><td>1</td><td>8888</td></tr>
-                    <tr><td class="dist">二等奖</td><td class="dist">2</td><td class="dist">888</td></tr>
-                    <tr><td>三等奖</td><td>10</td><td>88</td></tr>
-                    <tr><td class="dist">四等奖</td><td class="dist">100 </td><td class="dist">8</td></tr>
-                    <tr><td>安慰奖</td><td>1000</td><td>1</td></tr>
+                	<tr><td class="dist">级别</td><td class="dist">奖金数（米粒）</td><td class="dist">奖励名额</td></tr>
+                    <tr><td>一等奖</td><td>8888</td><td>20</td></tr>
+                    <tr><td class="dist">二等奖</td><td class="dist">888</td><td class="dist">200</td></tr>
+                    <tr><td>三等奖</td><td>88</td><td>1000</td></tr>
+                    <tr><td class="dist">四等奖</td><td class="dist">8</td><td class="dist">10000</td></tr>
+                    <tr><td>安慰奖</td><td>1</td><td>10000</td></tr>
                 </tbody>
             </table>
+            <p>注：最终奖励名额可根据实际情况进行调整。<br/>积粒网保留在法律规定的范围内对上述规则进行解释的权利。</p>
     </div>
-
-    
 </div>
 </body>
 </html>
