页面jquery过滤重复提交

--- a/src/Jili/ApiBundle/Resources/views/User/qqFirstLogin.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/qqFirstLogin.html.twig
@@ -88,9 +88,11 @@
                 }
                 $(document).ready(function () {
                     $("#reg").click(function () {
+                        $("#reg").unbind('click');
                         $("#form1").submit();
                     });
                     $("#bind").click(function () {
+                        $("#bind").unbind('click');
                         $("#form2").submit();
                     });
                     $('.qqReg>span').addClass('corGlobBlue');
