--- a/src/Jili/ApiBundle/Resources/views/Default/help.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Default/help.html.twig
@@ -24,12 +24,12 @@
         </ul>
         <div class="askQuestion">
         	<h2><strong class="inlineBlock fnLeft">我要提问</strong><span class="inlineBlock fnRight"></span></h2>
-            <div class="askQuestionDetail borderGray fnHide">
+            <div class="askQuestionDetail borderGray">
             	<p><textarea class="clearTxt borderGray" id="fbc"></textarea><span class="defaultTxt">请输入您的问题</span></p>
                 <p class="contact mt5"><input type="text" class="clearTxt borderGray" id="email"/><span class="defaultTxt">请输入您的邮箱</span></p>
+                <p class="tips"></p>
                 <div class="askQuestionBtn mt5"><input type="button" class="submitQuestion" value="提 交" title="提 交" border="0" /></div>
             </div>
-            <div class="tips borderGray fnHide">非常感谢，我们已经收到了您的问题！之后我们会与您取得联系，并帮助您解决问题。</div>
         </div>
     </div>
     <div class="helpR borderGray fnRight">
