--- a/src/Jili/FrontendBundle/Resources/views/DecemberActivity/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/DecemberActivity/index.html.twig
@@ -289,5 +289,6 @@
             <p>注：最终奖励名额可根据实际情况进行调整。<br/>积粒网保留在法律规定的范围内对上述规则进行解释的权利。</p>
     </div>
 </div>
+{% include '::analytics_js.html.twig' %} 
 </body>
 </html>
