--- a/src/Jili/ApiBundle/Resources/views/footer.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/footer.html.twig
@@ -9,3 +9,4 @@
 	class="tencent" target="_blank" href="http://t.qq.com/china91jili">腾讯微博</a><!--<a class="weixin" href="#">微信</a>--></p>
 </section>
 </footer>
+{% include '::analytics_js.html.twig' %} 
